<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ChirpyClock</string>
    <string name="action_settings">Information</string>
    <string name="action_start_quiz">Train</string>

    <!-- Alarm Activity Screen -->
    <string name="txtLabel">Label</string>
    <string name="btnDayMon">MON</string>
    <string name="btnDayTue">TUE</string>
    <string name="btnDayWed">WED</string>
    <string name="btnDayThu">THU</string>
    <string name="btnDayFri">FRI</string>
    <string name="btnDaySat">SAT</string>
    <string name="btnDaySun">SUN</string>
    <string name="btnRepeat">Repeat</string>


    <string name="alarm_show_min">Alarm set for %1$d Minute from now</string>
    <string name="alarm_show_mins">Alarm set for %1$d Minutes from now</string>
    <string name="alarm_show_hour_mins">Alarm set for %1$d Hour, and %2$d Minutes from now</string>
    <string name="alarm_show_hours_mins">Alarm set for %1$d Hours, and %2$d Minutes from now</string>
    <string name="alarm_show_day_hour_mins">Alarm set for %1$d Day, %2$d Hours, and %3$d Minutes from now</string>
    <string name="alarm_show_days_hours_mins">Alarm set for %1$d Days, %2$d Hours, and %3$d Minutes from now</string>


    <!-- Alarm Manager -->
    <string name="alarm_repeat_without_a_weekday">You need to choose at least one weekday</string>
    <string name="alarm_turned_off">Alarm turned off</string>
    <string name="alarm_turned_on">Alarm turned on</string>
    <string name="title_activity_quiz">QuizActivity</string>
    <string name="quiz_question">Who is chirping?</string>
    <string name="quiz_details_more_information">MORE INFORMATION</string>
    <string name="quiz_details_head_label">Correct!</string>

    <string name="info_tab_title_author">Authors</string>
    <string name="info_tab_title_credentials">Credentials</string>
    <string name="info_tab_title_privacy">Data Privacy</string>
    <string-array name="author_list">
        <item>Anne, Redakteurin, Kulturmanagerin und Nachtigall, singt gerne nachts, findet den Morgen grauselig und ist gern auf Wanderschaft</item>
        <item>Maria Sigal, Studentin der Informatik und Bülbül Vogel, mag essen und schlafen</item>
        <item>Stephanie Weber, User Experience Designer, liebt die Farben und Geräusche exotischer Vögel genauso wie den bunten Geschmack kolumbianischer Früchte</item>
        <item>David Gómez, kolumbianischer Grafikdesigner, ist schon durch viele Orte der Welt geflogen und zwitschert seit einem Jahr aus Hamburg</item>
        <item>Simon, Student der Informatik, Hobby Freiberufler und Seeadler, bei der Beobachtung trinkt er gerne auch mal ein Bier und gleitet gerne über die Meere</item>
    </string-array>

    <string-array name="credentials_list">
        <item>Birdcalls provide by "Museum für Naturkunde" Berlin (Creative Commons (CC BY-SA 3.0))</item>
        <item>Abstracts come from Wikipedia and was loaded with DBpedia</item>
        <item>Eagle owl is from Softeis. The picture is under license Creative-Commons-License 3.0</item>
        <item>Bluethroat is from Bogomolov.PL. The picture is under license Creative-Commons-License 3.0</item>
        <item>Woodlark is from Rodrigo de Almeida. The picture is under license Creative-Commons-License 2.0</item>
        <item>Little Owl is from Arturo Nikolai. The picture is under license Creative-Commons-License 2.0</item>
        <item>Golden Oriole is from Dixi. The picture is under license Creative-Commons-License 3.0</item>
        <item>Whooper Swan is from Andreas Trepte. The picture is under license Creative Commons Attribution-Share Alike 2.5 Generic</item>
        <item>Redstart is from Debot. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Nightingale is from J. Dietrich. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Herring Gull is from Kulac. The picture is under license Creative Commons Attribution-Share Alike 2.5 Generic</item>
        <item>Willow Warbler is from Andreas Trepte. The picture is under license Creative Commons Attribution-Share Alike 2.5 Generic</item>
        <item>Goldfinch is from Pierre Dalous. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Tree Sparrow is from Laitche. The picture is under license Public domain</item>
        <item>Yellowhammer is from Alan Vernon. The picture is under license Creative Commons Attribution 2.0 Generic</item>
        <item>Chiffchaff is from Hans Hillewaert. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Greylag Goose is from H005. The picture is under license Public domain</item>
        <item>Jay is from Luc Viatour. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Great Spotted Woodpecker is from Steffen Hannert. The picture is under license Creative Commons Attribution 3.0 Unported</item>
        <item>Coot is from Noodle snacks. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Robin is from PierreSelim. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Grey Heron is from JJ Harrison. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Buzzard is from Arend. The picture is under license Creative Commons Attribution 2.0 Generic</item>
        <item>Carrion Crow is from BS Thurner Hof. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Wood Pigeon is from Tristan Ferne. The picture is under license Creative Commons Attribution 2.0 Generic</item>
        <item>House Martin is from Ómar Runólfsson. The picture is under license Creative Commons Attribution 2.0 Generic</item>
        <item>Chaffinch is from Andreas Trepte. The picture is under license Creative Commons Attribution-Share Alike 2.5 Generic</item>
        <item>Crane is from Marek Szczepanek. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Great Tit is from Luc Viatour. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Great Cormorant is from Miya. The picture is under license Creative Commons Attribution-Share Alike 3.0 Unported</item>
        <item>Magpie is from Teemu Lehtinen. The picture is under license Creative Commons Attribution 2.0 Generic</item>
        <item>Kestrel is from Andreas Trepte. The picture is under license Creative Commons Attribution-Share Alike 2.5 Generic</item>
    </string-array>

    <string-array name="credentials_link_list" formatted="false">
        <item>http://www.species-id.net/openmedia/Category:Media_by_Tierstimmenarchiv_MfN</item>
        <item>http://dbpedia.org/About</item>
        <item>http://commons.wikimedia.org/wiki/File:Uhu-muc.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Luscinia_svecica_volgae.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Lullula_arborea_Rodrigo%29de_Almeida.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Mochuelo_Com%C3%BAn_%28_Athene_noctua_%29%281%29.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Oriole_2.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Singschwan.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Gekraagde_Roodstaart_20040627.JPG</item>
        <item>http://commons.wikimedia.org/wiki/File:Nachtigall_%28Luscinia_megarhynchos%29-2.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Larus_argentatus01.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Willow_Warbler_Phylloscopus_trochilus.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Carcar.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Tree_Sparrow_Japan_Flip.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Emberiza_citrinella_-New_Zealand_-North_Island-8.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Phylloscopus_collybita_%28taxobox%29.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Graugans_Anser_Anser.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Garrulus_glandarius_1_Luc_Viatour.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Buntspecht_Dendrocopos_major-2.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Eurasian_Coot.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Rouge_gorge_familier_-_crop_%28WB_correction%29.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Ardea_cinerea_-_Pak_Thale.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Buteo_buteo_-Netherlands-8.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Corvus_corone_Rabenkr%C3%A4he_1.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Columba_palumbus_-garden_post-8.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Delichon_urbicum_-Iceland_-flying-8.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Chaffinch_%28Fringilla_coelebs%29.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Grus_grus_1_%28Marek_Szczepanek%29.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Parus_major_2_Luc_Viatour.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Phalacrocorax_carbo_ja01.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Pica_pica_-Helsinki%2C_Finland-8a.jpg</item>
        <item>http://commons.wikimedia.org/wiki/File:Common_kestrel_falco_tinnunculus.jpg</item>
    </string-array>

    <string-array name="privacy_list">
        <item>The App sends after a Alarm to www.farbtrommel.de following data:</item>
        <item>Wake-up time</item>
        <item>Duration</item>
        <item>Number of tries</item>
        <item>Possible answers</item>
        <item>Right answer</item>
        <item>All collected data are published under www.farbtrommel.de.</item>
    </string-array>
</resources>
