<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AlarmActivity"
    android:background="@drawable/green_background"
    android:padding="0dp">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:id="@+id/scrollView"
        android:fillViewport="false">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:visibility="visible">

            <Switch
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/switchStatus"
                android:layout_gravity="right"
                android:checked="false"
                android:thumb="@drawable/my_colored_btn" />

            <TimePicker
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/timePicker"
                android:theme="@style/MyTimePicker"
                android:textOn="asd"
                android:focusableInTouchMode="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"/>

            <EditText
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:id="@+id/txtLabel"
                android:enabled="true"
                android:hint="@string/txtLabel"
                android:inputType="textShortMessage"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/InputText"
                android:padding="5dp"
                android:autoText="true"
                android:clickable="true"
                android:background="@color/InputBg"
                android:windowSoftInputMode="adjustPan"/>

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btnRepeat"
                android:id="@+id/boxRepeat"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/btnDayHeight"
                android:id="@+id/weekdays" >

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btnDayHeight"
                    android:layout_weight="0.14285714285"
                    android:textOn="@string/btnDayMon"
                    android:textOff="@string/btnDayMon"
                    android:id="@+id/btnDayMon"
                    android:padding="3dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/my_colored_btn"
                    android:textColor="@color/InputText"
                    android:enabled="true"
                    android:clickable="true"
                    android:checked="false"
                    android:button="@drawable/my_colored_btn" />

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btnDayHeight"
                    android:layout_weight="0.14285714285"
                    android:textOn="@string/btnDayTue"
                    android:textOff="@string/btnDayTue"
                    android:id="@+id/btnDayTue"
                    android:padding="3dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/my_colored_btn"
                    android:textColor="@color/InputText"
                    android:enabled="true"
                    android:clickable="true"/>

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btnDayHeight"
                    android:layout_weight="0.14285714285"
                    android:textOn="@string/btnDayWed"
                    android:textOff="@string/btnDayWed"
                    android:id="@+id/btnDayWed"
                    android:longClickable="false"
                    android:padding="3dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/my_colored_btn"
                    android:textColor="@color/InputText"
                    android:enabled="true"
                    android:clickable="true"/>

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btnDayHeight"
                    android:layout_weight="0.14285714285"
                    android:textOn="@string/btnDayThu"
                    android:textOff="@string/btnDayThu"
                    android:id="@+id/btnDayThu"
                    android:padding="3dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/my_colored_btn"
                    android:textColor="@color/InputText"
                    android:enabled="true"
                    android:clickable="true"
                    android:checked="false" />

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btnDayHeight"
                    android:layout_weight="0.14285714285"
                    android:textOn="@string/btnDayFri"
                    android:textOff="@string/btnDayFri"
                    android:id="@+id/btnDayFri"
                    android:padding="3dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/my_colored_btn"
                    android:textColor="@color/InputText"
                    android:enabled="true"
                    android:clickable="true"/>

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btnDayHeight"
                    android:layout_weight="0.14285714285"
                    android:textOn="@string/btnDaySat"
                    android:textOff="@string/btnDaySat"
                    android:id="@+id/btnDaySat"
                    android:padding="3dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/my_colored_btn"
                    android:textColor="@color/InputText"
                    android:enabled="true"
                    android:clickable="true"/>

                <ToggleButton
                    android:layout_width="fill_parent"
                    android:layout_height="@dimen/btnDayHeight"
                    android:layout_weight="0.14285714285"
                    android:textOn="@string/btnDaySun"
                    android:textOff="@string/btnDaySun"
                    android:id="@+id/btnDaySun"
                    android:padding="3dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginBottom="0dp"
                    android:layout_marginRight="2dp"
                    android:background="@drawable/my_colored_btn"
                    android:textColor="@color/InputText"
                    android:enabled="true"
                    android:clickable="true"/>

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <fragment
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:name="de.farbtrommel.zwitscherwecker.InformationFragment"
        android:id="@+id/info_fragment"
        tools:layout="@layout/fragment_information"
        android:visibility="invisible"
        />

</RelativeLayout>
